Fix formatting of the whole project